# oop-labs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: mvc.yml
.github/workflows/: cpp.yml  mvc.yml  vector.yml
circles/: CMakeLists.txt  main.cpp
circles/cpp_src/app/: application.cpp  application.hpp
circles/cpp_src/model/geometry/: circle.cpp  circle.hpp
circles/cpp_src/view/gui/: ui.cpp  ui.hpp
circles/src/controllers/: application.py  command_manager.py  factory.py  input_controller.py
circles/src/controllers/commands/: add_command.py  color_command.py  delete_command.py  move_command.py  resize_command.py  select_command.py
circles/src/domain/: standard_factory.py  visitor.py
circles/src/domain/objects/: circle.py  rectangle.py  square.py  triangle.py
circles/src/domain/visitors/: color_visitor.py  move_visitor.py  resize_visitor.py  select_visitor.py
circles/src/model/: circle.cpp  circle.hpp  circles.cpp  circles.hpp  model.py  model_object.py
circles/src/model/scenarios/: geometry.py  select_strategy.py
circles/src/model/scenarios/strategies/: back_select_strategy.py  front_select_strategy.py
circles/src/utils/observer/: observer.py  subject.py
circles/src/view/: canvas.py  color_button.py  draw_visitor.py  ui.py  window.py
circles/src/view/form/: form.cpp  form.hpp
cpp/: CMakeLists.txt  basic.cpp  casts.cpp  constructors.cpp  inheritance.cpp  return_value.cpp  virtual.cpp
mvc/: CMakeLists.txt  main.cpp
mvc/app/: application.cpp  application.h  application.hpp
mvc/app/runner/: runner.cpp  runner.h  runner.hpp  runners.cpp  runners.hpp
mvc/gui/: form.cpp  form.hpp  ui.hpp
mvc/infrastructure/log/: log.cpp  log.hpp
mvc/infrastructure/storage/: storage.cpp  storage.h  storage.hpp
mvc/model/: model.cpp  model.h  model.hpp
mvc/model/observer/: observer.cpp  observer.h
mvc/res/: app.ui
mvc/src/app/: application.cpp  application.hpp
mvc/src/gui/: form.cpp  form.hpp  ui.cpp  ui.hpp
mvc/src/model/: model.cpp  model.hpp
mvc/src/model/observer/: observer.cpp  observer.hpp
mvc/src/utils/log/: log.cpp
mvc/src/utils/runner/: runner.cpp  runner.hpp  runners.cpp  runners.hpp
mvc/src/utils/storage/: storage.cpp  storage.hpp
mvc/src/view/: form.cpp  form.hpp  ui.cpp  ui.hpp
mvc/tests/: CMakeLists.txt  model_test.cpp  runner_test.cpp
paint/res/: paint.ui
paint/src/: main.py
paint/src/controllers/: application.py  command.py  command_manager.py  input_controller.py
paint/src/controllers/commands/: move_command.py  resize_command.py  select_command.py
paint/src/domain/: standard_factory.py  visitor.py
paint/src/domain/objects/: circle.py  ellipse.py
paint/src/domain/visitors/: color_visitor.py  move_visitor.py  resize_visitor.py  select_visitor.py
paint/src/model/: model.py
paint/src/model/scenarios/: geometry.py
paint/src/model/scenarios/strategies/: all_select_strategy.py  conquer_world.py  front_select_strategy.py
paint/src/view/: draw_visitor.py  window.py
stable_vector/: CMakeLists.txt
stable_vector/include/: stable_vector.h
stable_vector/src/: stable_vector.cpp
stable_vector/tests/: CMakeLists.txt  stable_vector_test.cpp
vector/: CMakeLists.txt  vector_run.cpp
vector/include/: vector.h
vector/src/: vector.cpp
vector/tests/: CMakeLists.txt  vector_test.cpp
